--- a/less/index.less
+++ b/less/index.less
@@ -57,3 +57,91 @@ html, body {
     height: 100%;
 }
 
+@border: solid black 2px;
+
+body{
+	margin: 30px;
+	border: @border;
+}
+
+.static-navbar{
+	display: flex;
+	justify-content: flex-end;
+
+	
+	
+}
+
+header{
+	background: gray;
+	width: 90%;
+	margin: 15px auto;
+	padding: 10px;
+	border: @border
+
+}
+
+h1{
+	font-size: 5rem;
+	border: @border
+}
+
+h2{
+	font-size: 2rem;
+}
+
+h3{
+	font-size: 2rem;
+	border: @border
+}
+
+p{
+	font-size: 15px;
+	line-height: 30px;
+	border: @border
+
+}
+
+img{
+	height: 20%;
+	width: 50%;
+	margin: 10px auto;
+}
+
+.the-body{
+	display: flex;
+	align-items: space-around;
+	width: 90%;
+	margin: 15px auto;
+	// flex-direction:
+}
+
+.you-text{
+	border: @border;
+	width: 50%;
+	height: 100%;
+}
+
+.fun-content{
+	border: @border;
+	width: 50%;
+	height: 100%;
+}
+button{
+	border-radius: 4px;
+	background: red;
+	color: white;
+	padding: 8px;
+	
+}
+li{
+	margin: 10px;
+}
+
+.footer{
+	width: 90%;
+	margin: 15px auto;
+	padding: 10px;
+	border: @border
+	
+}
