--- a/css/index.css
+++ b/css/index.css
@@ -87,7 +87,7 @@ video {
   padding: 0;
   border: 0;
   font-size: 100%;
-  font: inherit;
+  font-family: Arial, Helvetica, sans-serif;
   vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -135,54 +135,45 @@ body {
   height: 100%;
 }
 body {
-  margin: 30px;
-  border: solid black 2px;
+  width: 90%;
+  margin: 30px auto;
 }
 .static-navbar {
   display: flex;
   justify-content: flex-end;
 }
 header {
-  background: gray;
-  width: 90%;
-  margin: 15px auto;
-  padding: 10px;
-  border: solid black 2px;
+  background: #ebf2fc;
+  padding: 3rem;
+  border-radius: 4px;
 }
 h1 {
   font-size: 5rem;
-  border: solid black 2px;
 }
 h2 {
   font-size: 2rem;
 }
 h3 {
   font-size: 2rem;
-  border: solid black 2px;
 }
 p {
   font-size: 15px;
   line-height: 30px;
-  border: solid black 2px;
 }
 img {
   height: 20%;
   width: 50%;
-  margin: 10px auto;
+  margin: 20px auto;
 }
 .the-body {
   display: flex;
   align-items: space-around;
-  width: 90%;
-  margin: 15px auto;
 }
 .you-text {
-  border: solid black 2px;
   width: 50%;
   height: 100%;
 }
 .fun-content {
-  border: solid black 2px;
   width: 50%;
   height: 100%;
 }
@@ -196,8 +187,20 @@ li {
   margin: 10px;
 }
 .footer {
-  width: 90%;
-  margin: 15px auto;
   padding: 10px;
-  border: solid black 2px;
+}
+#work {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+  margin: 15px;
+}
+td,
+th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+tr:nth-child(even) {
+  background-color: #dddddd;
 }
