--- a/less/index.less
+++ b/less/index.less
@@ -21,7 +21,7 @@ time, mark, audio, video {
 	padding: 0;
 	border: 0;
 	font-size: 100%;
-	font: inherit;
+	font-family: Arial, Helvetica, sans-serif;
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -59,31 +59,34 @@ html, body {
 
 @border: solid black 2px;
 
-body{
-	margin: 30px;
-	border: @border;
-}
+ body{
+	width: 90%;
+	margin: 30px auto;
+ }
 
 .static-navbar{
 	display: flex;
 	justify-content: flex-end;
+
 
 	
 	
 }
 
 header{
-	background: gray;
-	width: 90%;
-	margin: 15px auto;
-	padding: 10px;
-	border: @border
+	background: rgb(235, 242, 252);
+	// width: 90%;
+	// margin: 15px auto;
+	padding: 3rem;
+	border-radius: 4px;
+	
+
 
 }
 
 h1{
 	font-size: 5rem;
-	border: @border
+	
 }
 
 h2{
@@ -92,38 +95,36 @@ h2{
 
 h3{
 	font-size: 2rem;
-	border: @border
+	
 }
 
 p{
 	font-size: 15px;
 	line-height: 30px;
-	border: @border
+	
 
 }
 
 img{
 	height: 20%;
 	width: 50%;
-	margin: 10px auto;
+	margin: 20px auto;
 }
 
 .the-body{
 	display: flex;
 	align-items: space-around;
-	width: 90%;
-	margin: 15px auto;
+	// width: 90%;
+	// margin: 15px auto;
 	// flex-direction:
 }
 
 .you-text{
-	border: @border;
 	width: 50%;
 	height: 100%;
 }
 
 .fun-content{
-	border: @border;
 	width: 50%;
 	height: 100%;
 }
@@ -139,9 +140,31 @@ li{
 }
 
 .footer{
-	width: 90%;
-	margin: 15px auto;
+	// width: 90%;
+	// margin: 15px auto;
 	padding: 10px;
-	border: @border
+	
 	
 }
+#work{
+	font-family: arial, sans-serif; 
+	border-collapse: collapse;  
+	width: 100%; 
+	margin: 15px;
+} 
+td, th {  
+	border: 1px solid #dddddd;
+	text-align: left;  
+	padding: 8px; 
+} 
+			
+tr:nth-child(even) {  
+	background-color: #dddddd;
+}
+// 	padding: 10px;
+// 	width: 90%;
+// 	margin: 30px;
+// }
+// td{
+
+// }
